hphp/hack/test/typecheck/stricter_consts/trait_typeconst_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

// Error: a child attempting to override a parent’s constant with a constant
// from a trait will fatal

class C {
  const type Ty = int;
}

trait T {
  const type Ty = string;
}

class D extends C {
  use T;
}
